@startuml
class GameplayGlobals <<static>> {
    + {static} currentID : int = 0
    + {static} logName : string <<get>>
}
enum Input {
    Mouse,
    Touch,
    Speech,
}
enum Scenes {
    Login,
    Simulation,
}
enum Severity {
    Easy,
    Hard,
}
class "Action`1"<T> {
}
class "Action`3"<T1,T2,T3> {
}
GameplayGlobals o-> "currentInput" Input
GameplayGlobals o-> "currentSeverity" Severity
GameplayGlobals --> "restartEvent" Action
GameplayGlobals --> "switchSceneEvent<Scenes>" "Action`1"
GameplayGlobals --> "setGameMode<int,Input,Severity>" "Action`3"
GameplayGlobals +-- Input
GameplayGlobals +-- Scenes
GameplayGlobals +-- Severity
@enduml
